<resources>
    <string name="app_name">GiddysChat</string>
    <string name="need_a_new_account">Need A New Account ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m Using Giddys Chat</string>
    <string name="set_display_name">Display Name</string>
</resources>
